# sienna

./: AGENTS.md  Cargo.toml  skills-lock.json
docs/: maintainability.md  roadmap.md
scripts/: check.sh
src/: blend.rs  blend_test.rs  brush.rs  canvas.rs  document.rs  document_test.rs  geom.rs  geom_test.rs  main.rs  project_modal.rs  sidebar.rs  stroke.rs  tile.rs  tool.rs  ui_components.rs  workspace.rs
