[package]
name = "sienna"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
gpui = { git = "https://github.com/zed-industries/zed", features = ["test-support"] }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "x11", "wayland", "runtime_shaders"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", version = "0.5.1" }
image = "0.25.10"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
smallvec = "1.15.1"
tokio = { version = "1.40.0", features = ["sync", "rt"] }
